objects/LBI_Cross_Sell__c.object
<CustomObject>
    <description>Lattice Cross Sell Additional Info Table</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LBI_CROSS_SELLS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBS__c</fullName>
        <label>CBS %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPD__c</fullName>
        <label>CPD %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Site_ID__c</fullName>
        <label>Customer -Site ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Site_Name__c</fullName>
        <label>Customer-Site Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Range__c</fullName>
        <label>Date Range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furniture__c</fullName>
        <label>Furniture %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ink_Toner__c</fullName>
        <label>Ink &amp; Toner %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Office_Supplies__c</fullName>
        <label>Office Supplies %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Paper__c</fullName>
        <label>Paper %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipName>LBI_CROSS_SELLS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech__c</fullName>
        <label>Tech %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <label>Total Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>LBI Cross Sell</label>
    <nameField>
        <label>LBI CROSS SELL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LBICross Sells</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>